fix: decrease MiniTable gap

--- a/src/styles/components/_mini-table.scss
+++ b/src/styles/components/_mini-table.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
 
-  gap: 2.2rem;
+  gap: 0.4rem;
 }
 
 .mini-table__item {
