--- a/src/styles/components/_quick-trade.scss
+++ b/src/styles/components/_quick-trade.scss
@@ -10,5 +10,7 @@
   height: 100vh;
   width: 32.4rem;
 
+  padding: 2.4rem;
+
   background-color: $gray-900;
 }
